# Sign in with the demo credentials.
appId: app.frontrow.qa
---
- runFlow:
    when:
      notVisible:
        id: 'screen.events'
    commands:
      - launchApp:
          clearState: true
      - extendedWaitUntil:
          visible:
            id: 'screen.events'
          timeout: 20000

- runFlow:
    when:
      platform: iOS
    commands:
      - hideKeyboard
- tapOn:
    id: 'tab.profile'
- extendedWaitUntil:
    visible:
      id: 'screen.profile'
    timeout: 10000
- runFlow:
    file: login-credentials.yaml
